<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResultsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/titolDiaiHora" />

        <TextView
            android:id="@+id/diaHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:gravity="center"
            android:paddingBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/titolValorsLog" />

        <TextView
            android:id="@+id/valorsLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/titolCorreuElectronic" />

        <EditText
            android:id="@+id/correuLog"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:gravity="center"
            android:paddingBottom="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/espaiUp"
            android:onClick="enviarCorreuLog"
            android:text="@string/titolEnviarmail" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="novaPartida"
            android:text="@string/titolNovaPartida" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="sortirT"
            android:text="@string/exit" />


    </LinearLayout>
</ScrollView>